--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,8 @@
                 <!-- Menu Section -->
                 <div class="flex space-x-10 items-center font-bold text-white">
                     <a href='/' class="flex hover:text-green-500 cursor-pointer">HOME</a>
-                    <a href='/' target="_black" class="flex hover:text-yellow-500 cursor-pointer">CONTACT US</a>
-                    <a href='/' target="_black" class="flex hover:text-yellow-500 cursor-pointer">LOGIN</a>
+                    <a href='/' class="flex hover:text-yellow-500 cursor-pointer">CONTACT US</a>
+                    <a href='/' class="flex hover:text-yellow-500 cursor-pointer">LOGIN</a>
                 </div>
             </nav>
         </div>
