improve model use ResNet9

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                 <!-- Menu Section -->
                 <div class="flex space-x-10 items-center font-bold text-white">
                     <a href='/' class="flex hover:text-green-500 cursor-pointer">HOME</a>
-                    <a href='/' class="flex hover:text-yellow-500 cursor-pointer">CONTACT US</a>
+                    <a href='/code' class="flex hover:text-yellow-500 cursor-pointer">CODE</a>
                     <a href='/' class="flex hover:text-yellow-500 cursor-pointer">LOGIN</a>
                 </div>
             </nav>
